# waybar-sway-workspace-output-manager

./: Cargo.toml  LICENSE  README.md
src/: main.rs
